src/test/resources/examples/failing/oxford-07.t
https://comjnl.oxfordjournals.org/content/52/7/824.abstract

Unicode in title and abstract. Underscore in title and abstract.
WARNING: Oxford imposes rate limiting.  BibScrape might hang if you try multiple papers in a row.
WARNING: 'A' may need to be wrapped in curly braces if it needs to stay capitalized
@article{Alhadidi:2009:lsaop:10.1093/comjnl/bxn065,
  author = {Alhadidi, D[ima] and Belblidia, N[adia] and Debbabi, M[ourad] and Bhattacharya, P[rabir]},
  affiliation = {Computer Security Laboratory (CSL), Concordia Institute for Information Systems Engineering, Concordia University, Montreal, Quebec, CanadaH3G 1M8 and Computer Security Laboratory (CSL), Concordia Institute for Information Systems Engineering, Concordia University, Montreal, Quebec, CanadaH3G 1M8 and Computer Security Laboratory (CSL), Concordia Institute for Information Systems Engineering, Concordia University, Montreal, Quebec, CanadaH3G 1M8 and Computer Security Laboratory (CSL), Concordia Institute for Information Systems Engineering, Concordia University, Montreal, Quebec, CanadaH3G 1M8},
  title = {{\textgreek{l}}{\_}{SAOP}: {A} Security {AOP} Calculus},
  journal = {The Computer Journal},
  volume = {52},
  number = {7},
  pages = {824--849},
  month = oct,
  year = {2009},
  publisher = {Oxford University Press},
  issn = {0010-4620 (Print) 1460-2067 (Online)},
  doi = {10.1093/comjnl/bxn065},
  eprint = {https://academic.oup.com/comjnl/article-pdf/52/7/824/1066486/bxn065.pdf},
  bib_scrape_url = {https://comjnl.oxfordjournals.org/content/52/7/824.abstract},
  abstract = {This paper presents an aspect-oriented calculus for security called {\textgreek{l}}{\_}SAOP. It is based on the {\textgreek{l}}{\_}calculus and contains pointcuts that are relevant to security hardening of applications. The main contribution of the paper is a semantics for {\textgreek{l}}{\_}SAOP advice weaving in the presence of these pointcuts. We instrument the effect-based type inference system to inject advices into expressions during static typing. The proposed semantics for advice weaving is in the spirit of AspectJ, a prominent aspect-oriented programming language, where advices are injected before, after or around the join points that match their respective pointcuts. For this purpose, we accommodate the effect-based inference algorithm to take matching and weaving processes into consideration. In addition, we establish the required soundness and preservation proofs.},
}
